---------------------------------------------------------------------------------------------------
Version: 0.18.1
Date: 30. 05. 2020
  Features:
    - updated GUI:
      * request-slots resemble logistics tab (10 per line, no spacing)
      * request-slots support min- and max-request (max will be ignored if pasting into requester chest)
  Bugfixes:
    - Fixed crashes on load and creation as well as serveral others
    - updated GUI:
      * template-buttons (save, load, delete) fitted into the frame if on non english locale
      * reduced jumping of frames
  ToDo:
    - blueprint request by drop to request-slots does not work
---------------------------------------------------------------------------------------------------
Version: 0.18.0
Date: 23. 01. 2020
  Features:
    - Updated for Factorio 0.18
  Bugfixes:
    - Fixed crash when an item saved in a preset is removed from the game
---------------------------------------------------------------------------------------------------
Version: 0.17.4
Date: 21. 05. 2019
  Features:
    - Presets can be applied to a logistic chest by opening the chest and using the load preset button
  Bugfixes:
    - Fixed potential crash when an inventory's entity was invalidated
---------------------------------------------------------------------------------------------------
Version: 0.17.3
Date: 06. 04. 2019
  Features:
    - Blueprints can now be dropped straight onto an inventory logistic slot to request them
    - Added the ability to request a blueprint into a logistics chest by placing the blueprint in one of its request slots.
---------------------------------------------------------------------------------------------------
Version: 0.17.2
Date: 05. 04. 2019
  Changes:
    - Display requested item counts in preset gui
    - Requesting a blueprint will add to your requests rather than overwriting them
    - Reworked gui internals to make future changes easier
  Bugfixes: