@@ -17,19 +17,20 @@ end
 script.on_event(defines.events.on_gui_click, function(event)
 	local player = game.players[event.player_index]
 	if not (player and player.valid) then return end
-	local frame_flow = mod_gui.get_frame_flow(player)
+	local gui_frame = gui.get_screen_frame(player)
 	local gui_clicked = event.element.name
 	
-	if mod_gui.get_button_flow(player)["logistic-request-manager-button"] then
-		gui.kill_old(player)
-		gui.build(player)
-		frame_flow[lrm.gui.frame].visible = true
-		return
+	if gui_frame then 
+		global["screen_location"][player.index] = gui_frame.location
 	end
-	
+
 	if gui_clicked == lrm.gui.toggle_button then
-		if frame_flow[lrm.gui.frame] and frame_flow[lrm.gui.frame].visible then
-			frame_flow[lrm.gui.frame].visible = false
+		if event.shift then
+			gui_frame.location = {200, 100}
+			global["screen_location"][player.index] = gui_frame.location
+		end
+		if gui_frame and gui_frame.visible then
+			gui_frame.visible = false
 		else
 			gui.force_rebuild(player, true)
 			select_preset(player, global["presets-selected"][player.index])
@@ -115,3 +116,15 @@ end)
 script.on_configuration_changed(function()
 	globals.init()
 end)
+
+
+script.on_event(defines.events.on_runtime_mod_setting_changed,function(event)
+	player = game.players[event.player_index]
+	setting = event.setting
+	value = event.value
+	game.print("on_runtime_mod_setting_changed: " .. serpent.dump(event))
+end)
+
+function read_settings ()
+
+end
